feat: add slides html

--- a/index.html
+++ b/index.html
@@ -5,8 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    
+    <div class="slider middle">
+        <div class="slides">
+            <input type="radio" name="r" id="r1" checked>
+            <input type="radio" name="r" id="r2">
+            <input type="radio" name="r" id="r3">
+            <input type="radio" name="r" id="r4">
+
+            <div class="slide"><img src="" alt=""></div>
+            <div class="slide"><img src="" alt=""></div>
+            <div class="slide"><img src="" alt=""></div>
+            <div class="slide"><img src="" alt=""></div>
+        </div>
+    </div>
 </body>
 </html>
