feat: add slider

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
             <input type="radio" name="r" id="r3">
             <input type="radio" name="r" id="r4">
 
-            <div class="slide"><img src="" alt=""></div>
+            <div class="slide"><img src="" alt="">
+                <p class="text"></p>
+            </div>
             <div class="slide"><img src="" alt=""></div>
             <div class="slide"><img src="" alt=""></div>
             <div class="slide"><img src="" alt=""></div>
@@ -26,6 +28,8 @@
             <label for="r3" class="bar"></label>
             <label for="r4" class="bar"></label>
         </div>
+
+        
     </div>
 </body>
 </html>
